# tree-sitter-b

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  asm.b  binding.gyp  go.mod  grammar.js  highlight-example.sh  main.b  package-lock.json  package.json  pyproject.toml  tree-sitter.json
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tree_sitter_b/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterCTests/: TreeSitterCTests.swift
queries/: highlights.scm  indents.scm  injections.scm  stdlib.scm
src/: grammar.json  node-types.json  parser.c
test/highlight/: 9.1.b  9.2.b  9.3.b  9.3.c
